@@ -1,2 +1,2 @@
-usr/lib/*/ostree/installed-tests
+usr/lib/ostree/installed-tests
 usr/share/installed-tests/ostree
